[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/fishing_hook.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=3]
rough = true

[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2
radial_segments = 8
rings = 4

[sub_resource type="SphereShape" id=2]
radius = 0.0972608

[sub_resource type="SphereShape" id=4]
radius = 0.115623

[node name="FishingHook" type="RigidBody" groups=["NonHookStopping"]]
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource( 3 )
script = ExtResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="GroundCollision" type="Area" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="GroundCollision"]
shape = SubResource( 4 )

[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="GroundCollision" to="." method="_on_GroundCollision_body_entered"]
